<resources>
    <string name="app_name">Lumberjack Notes</string>

    <string name="notetaking_content_default">Start typing here…</string>

    <string name="note_search_title">Search</string>
    <string name="note_export_title">Export Note</string>
    <string name="note_profile_title">Profile</string>

    <string name="login">Login</string>
    <string name="register">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="loading">Loading…</string>

    <string name="login_banner_title">@string/app_name</string>
    <string name="login_banner_subtitle">@string/login</string>
    <string name="login_register_banner">Don\'t have an account yet?</string>
    <string name="login_register_text">Sign Up</string>

    <string name="login_user_not_found">Your account was not found! Check your login information and try again.</string>
    <string name="login_user_not_confirmed">Your account is not verified yet!</string>
    <string name="login_not_authorized">Your login information was incorrect! Please try again.</string>
    <string name="login_user_exists">That username is already taken!</string>
    <string name="login_invalid_parameter">Your login information is invalid! Make sure you are using 8 characters, and
        at least 1 capital letter, number, and special character.</string>
    <string name="login_error_login_other">There was an unknown error signing in!</string>
    <string name="login_error_register_other">There was an unknown error signing up!</string>

    <string name="note_searchable_hint">Search notes…</string>
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Confirm password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>