<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/notetaking_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/notetaking_editor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/notetaking_content_default"
        android:gravity="top|start"/>
</FrameLayout>